Fix colour contrast issue on the banner

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -145,7 +145,7 @@ a:focus {
 
 #custom-order-banner {
     background-color: #D1A9AF;
-    color: #2B5357;
+    color: #1C1C1C;
     font-style: italic;
     font-weight: bolder;
 }
